; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/core/extr_mmal_port_clock.c_mmal_port_clock_alloc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/core/extr_mmal_port_clock.c_mmal_port_clock_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMAL_PORT_TYPE_CLOCK = common dso_local global i32 0, align 4
@MMAL_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mmal_port_clock_alloc(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @MMAL_PORT_TYPE_CLOCK, align 4
  %11 = load i32, i32* %6, align 4
  %12 = zext i32 %11 to i64
  %13 = add i64 %12, 4
  %14 = trunc i64 %13 to i32
  %15 = call i32* @mmal_port_alloc(i32* %9, i32 %10, i32 %14)
  store i32* %15, i32** %8, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %31

19:                                               ; preds = %3
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i64 @mmal_port_clock_setup(i32* %20, i32 %21, i32 %22)
  %24 = load i64, i64* @MMAL_SUCCESS, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %19
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @mmal_port_free(i32* %27)
  store i32* null, i32** %4, align 8
  br label %31

29:                                               ; preds = %19
  %30 = load i32*, i32** %8, align 8
  store i32* %30, i32** %4, align 8
  br label %31

31:                                               ; preds = %29, %26, %18
  %32 = load i32*, i32** %4, align 8
  ret i32* %32
}

declare dso_local i32* @mmal_port_alloc(i32*, i32, i32) #1

declare dso_local i64 @mmal_port_clock_setup(i32*, i32, i32) #1

declare dso_local i32 @mmal_port_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
